# beam.eysho.info

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: rust.yml
docs/: deploy-compose.md
src/admin/: Cargo.toml
src/admin-ui/: Cargo.toml  Dioxus.toml  README.md
src/admin-ui/assets/: style.css
src/admin-ui/src/: main.rs
src/admin/src/: main.rs
src/client/: Cargo.toml
src/client/src/: main.rs
src/router/: Cargo.toml
src/router/src/: main.rs
src/server/: Cargo.toml
src/server/src/: main.rs
webui/: README.md
webui/admin/: Cargo.toml  Dioxus.toml  index.html
webui/admin/assets/: style.css
webui/admin/src/: main.rs
webui/users/: Cargo.toml  Dioxus.toml  index.html
webui/users/assets/: style.css
webui/users/src/: main.rs
