[package]
name = "bkg-beam-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.5", features = ["web"] }
dioxus-web = "0.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
