[package]
name = "bkg-beam-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
